--- a/index.html
+++ b/index.html
@@ -25,144 +25,146 @@
         </ul>
       </div>
     </div>
-    <div class="main-container">
-      <h1>Lorem ipsum</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
-        fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
-        adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
-        impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
-        maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
-        commodi reiciendis eveniet qui impedit asperiores autem.
-      </p>
-    </div>
+    <main>
+      <div class="main-container">
+        <h1>Lorem ipsum</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum
+          fugiat nemo, qui debitis molestias maiores laboriosam fuga ipsam
+          adipisci quod. Voluptatibus recusandae commodi reiciendis eveniet qui
+          impedit asperiores autem. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Harum laborum fugiat nemo, qui debitis molestias
+          maiores laboriosam fuga ipsam adipisci quod. Voluptatibus recusandae
+          commodi reiciendis eveniet qui impedit asperiores autem.
+        </p>
+      </div>
+    </main>
     <footer>
       <h4>This is the footer</h4>
     </footer>
