--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="header-container">
       <div class="logo">
-        <i class="fas fa-cat"></i>
+        <a href=""> <img src="./icon-cat.png" alt="" /></a>
       </div>
       <div class="nav-menu">
         <ul class="menu-link">
